# roft-samples

./: CMakeLists.txt  README.md
assets/: iCubGenova11_demo.md
assets/iCubGenova01/contexts/realsense-holder-publisher/: config_half_tilted.ini  config_no_tilted.ini  config_tilted.ini  eMc_half_tilted.txt  eMc_no_tilted.txt  eMc_tilted.txt
assets/iCubGenova11/contexts/realsense-holder-publisher/: config_half_tilted_v27.ini  config_half_tilted_v27_d405.ini  eMc_half_tilted_v27.txt  eMc_half_tilted_v27_d405.txt
dockercompose/: README.md  docker-compose.yml  set_swarm_down.sh  set_swarm_up.sh
dockerfiles/: Dockerfile  build.sh  run.sh
src/grasp-data/: CMakeLists.txt
src/grasp-data/include/: RankableCandidate.h
src/grasp-data/thrift/: grasp_data.thrift
src/grasp-viewer/: CMakeLists.txt
src/grasp-viewer/app/conf/: config.ini
src/grasp-viewer/include/: iCubGaze.h  module.h  viewer.h
src/grasp-viewer/src/: iCubGaze.cpp  main.cpp  module.cpp  vtkUpdateHandler.cpp
src/handover/: CMakeLists.txt
src/handover/app/: roft-samples-handover-embedded.xml  roft-samples-handover-hyperpcr.xml  roft-samples-handover-speech.xml  roft-samples-handover.xml
src/handover/app/conf/: config.ini  config.ini.iCubGenova01  config.ini.iCubGenova11  config_hyperpcr_oos.ini
src/handover/dockercompose/: docker-compose.yml
src/handover/include/: Utils.h  cardinal_points_grasp.h  iCubCartesian.h  iCubGaze.h  iCubMotors.h  iCubMotorsPositions.h  module.h
src/handover/scripts/: speech.lua
src/handover/src/: Utils.cpp  iCubCartesian.cpp  iCubGaze.cpp  iCubMotors.cpp  iCubMotorsPositions.cpp  main.cpp  module.cpp
src/handover/thrift/: idl.thrift
src/roft/: CMakeLists.txt
src/roft/app/: roft.xml  roft_hyperpcr.xml  roft_hyperpcr_ext_disp.xml  roft_tracker_only.xml
src/roft/app/conf/: config.ini  config_d405.ini
src/roft/include/: ROFTFilter.h  tracker.h
src/roft/src/: ROFTFilter.cpp  main.cpp  tracker.cpp
src/roft/thrift/: idl.thrift
src/rs/: CMakeLists.txt
src/rs/src/: main.cpp
